--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 
 .container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, 250px);
+  grid-template-columns: repeat(auto-fit, 250px);
   grid-gap: 5px;
   justify-content: center;
 }
